src/snapshots/afrotd__parser__tests__interpreation_html_7.1.4_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.4.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A hat sich an der B-45 in einer Formation aufgestellt, in der
            der Snapper A88 sich am rechten Ende der Line befindet. Die Linemen
            zu seiner Linken sind mit 56, 63, 72, 22, 79 und 25 nummeriert. Es
            befinden sich vier Team A-Spieler im Backfield. A44 steht 10 Meter
            direkt hinter dem Snapper und die anderen Backs stehen zu seiner
            Linken einige Meter hinter der Scrimmage Line. Kein Spieler
            befindet sich in Position als Holder für einen Place Kick. Nach dem
            Snap wirft A44 einen vollständigen Vorwärtspass auf Snapper A88,
            der einen Touchdown erzielt. Das ereignet sich (a) beim ersten oder
            zweiten Down; (b) dritten oder vierten Down.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Da nur vier Offense Linemen Trikots mit Nummern von 50 bis 79
                tragen, hängt die Legalität der Offense Formation davon ab, ob
                sich Team A in einer Scrimmage Kick-Formation befindet. Eine
                Voraussetzung für die Scrimmage KickFormation ist, „dass es
                offensichtlich ist, dass ein Kick versucht werden wird.“ (a)
                Illegale Formation: beim ersten und zweiten Down ist es eher
                unwahrscheinlich, dass ein Team punten wird. Daher ist es nicht
                offensichtlich, dass ein Kick versucht werden wird. (b) Legales
                Spiel: Touchdown. Beim dritten oder vierten Down ist es
                wahrscheinlich, dass ein Team kicken wird. (Regel 2.16.10).
            </p>
        </details>
    </div>
</article>
