src/snapshots/afrotd__parser__tests__interpreation_html_7.1.5_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.5.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Snapper A1 beginnt legal mit dem Snap, aber B2 schlägt ihm den Ball
            aus der Hand, bevor A1 den Snap vervollständigen kann, und B3
            recovert den freien Ball.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Sofort abpfeifen. Team B Dead Ball Foul. Der Ball bleibt dead.
                Strafe – 5 Meter vom Succeeding Spot. Team B darf den Ball
                nicht berühren, bevor dieser gesnappt worden ist. Team A bleibt
                in Ballbesitz.
            </p>
        </details>
    </div>
</article>
