src/snapshots/afrotd__parser__tests__interpreation_html_7.2.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.2.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            B20 fängt (a) in seiner Endzone oder (b) auf seiner 3-Meterlinie
            einen legalen Vorwärtspass ab und wird durch seinen eigenen Schwung
            in seine Endzone getragen oder (c) fängt den Vorwärtspass im
            Spielfeld und geht freiwillig zurück in seine Endzone (kein
            Eigenschwung). In jedem Fall fumbelt er in der Endzone und der Ball
            rollt nach vorne und geht an der B-2 ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball gehört Team B am Spot of Fumble (Team B’s Endzone):
                (a) Touchback, (b) Team B’s Ball an der B-3 und (c) Safety
                (Regeln 8.5.1 und 8.6.1).
            </p>
        </details>
    </div>
</article>
