src/snapshots/afrotd__parser__tests__interpreation_html_7.3.10_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.10.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Der unberechtigte Lineman A70 berührt einen Gegner innerhalb eines
            Meters jenseits der neutralen Zone. Er drängt B4 weiter als drei
            Meter jenseits der neutralen Zone zurück und kehrt danach hinter
            die neutrale Zone zurück, bevor A1 einen legalen Vorwärtspass
            wirft, der die neutrale Zone überquert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul, Offense Passbehinderung. Strafe – 15 Meter vom
                Previous Spot (Regel 7.3.8.b).
            </p>
        </details>
    </div>
</article>
