src/snapshots/afrotd__parser__tests__interpreation_html_7.3.10_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.10.III
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-37. Der unberechtigte Lineman A70 erhebt sich
            nach dem Snap und läuft downfield. Als der Passer den Ball
            loslässt, durchbricht der Helm von A70 die Fläche über der A-40.
            Der Pass überquert die neutrale Zone und fällt an der A-39
            unvollständig zu Boden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul, unberechtigter Receiver downfield. Ein Teil von A70’s
                Körper befand sich mehr als drei Meter jenseits der neutralen
                Zone, als der Pass geworfen wurde.
            </p>
        </details>
    </div>
</article>
