src/snapshots/afrotd__parser__tests__interpreation_html_7.3.11_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.11.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A snappt von der A-10. QB A12 geht zurück und wirft einen
            Vorwärtspass zum unberechtigten A70, während dieser sich in seiner
            Endzone befindet und (a) den Pass berührt, als er versucht, diesen
            zu fangen und der Pass wird unvollständig; (b) den Pass fängt und
            in der Endzone getackelt wird oder (c) den Pass fängt und den Ball
            bis zur A-3 advanct, wo er getackelt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Team B kann die 5-Meterstrafe, die einen Downverlust
                enthält, vom Previous Spot annehmen, wodurch der Down zählt.
                (b) der Ball ist in der Endzone dead, für dessen Antrieb Team A
                verantwortlich ist, und Team B kann den Safety oder die Strafe,
                die einen Downverlust enthält, vom Previous Spot wählen. (c)
                5-Meterstrafe und Downverlust. Der Versuch zählt, wenn die
                Strafe abgelehnt wird und der Dead Ball Spot günstiger für Team
                B ist als die Strafe (Beachte: (a), (b) und (c) könnten in
                Bezug auf die Position eines berechtigten Team A-Spielers oder
                der Örtlichkeit, von der A10 den Ball wirft, Intentional
                Grounding sein) (Regel 10.1.1.b). Wird auf ein Intentional
                Grounding erkannt, gibt es kein illegales Berühren eines
                Vorwärtspasses.
            </p>
        </details>
    </div>
</article>
