src/snapshots/afrotd__parser__tests__interpreation_html_7.3.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-25. QB A12 befindet sich in einer
            ShotgunFormation an der A-15 und Slot Receiver A80, der sich auf
            der weiten Seite der Formation aufgestellt hat, bewegt sich vor dem
            Snap zurück auf A12 zu. A12 fängt den Snap und flippt den Ball vor
            sich in die Luft, als A80 an ihm vorbeiläuft. A80 fängt den Ball
            nicht, sondern läuft weiter an A12 vorbei. A12 fängt den Ball
            selbst aus der Luft und (a) advanct downfield und läuft an der A-40
            ins Aus oder (b) wirft von der A-20 den Ball auf A88, der diesen an
            der A-40 fängt und dort zu Boden gebracht wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das kurze Flippen des Balles durch A12 wird als legaler
                Vorwärtspass gewertet, solange er nicht klar und deutlich
                rückwärts geworfen wird. (a) Das Fangen des Vorwärtspasses
                durch A12 ist legal und der Raumgewinn resultiert in einem 1.
                und 10 für Team A an der A-40. (b) Das Fangen des
                Vorwärtspasses durch A12 ist legal, aber der Vorwärtspass auf
                A88 ist der zweite Vorwärtspass während des Downs und damit ein
                illegaler Vorwärtspass gemäß Regel 7.3.2.d.
            </p>
        </details>
    </div>
</article>
